fixing some spacing issues occuring in the firefox browser. Still need to fix issues when window is resized but whole window looks fine. Also fixed minor bug with login button, where login boxes move up when pressing button

--- a/concert-finder/src/Login.css
+++ b/concert-finder/src/Login.css
@@ -1,17 +1,17 @@
 .background {
     background-position: top center;
     background-size: cover;
-    align-content: center;
     height: 100vh;
     width: 390vh;
 }
 .Login {
-    max-width: 550px;
-    min-height: 60vh;
+    max-width: 50%;
+    min-height: 50%;
     background-color: white;
     display: inline-grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     border-radius: 20px;
+    margin-top: 150px;
 }
 
 .left-side {
@@ -21,12 +21,14 @@
     border-radius: 20px;
     color: white;
     align-content: center;
+    padding: 20px;
 }
 
 .right-side {
     grid-column: 2;
     color: #e1a2ff;
     align-content: center;
+    padding: 35px;
 }
 
 .app-name {
@@ -75,12 +77,12 @@ input[type=text]:focus {
 #loginButton {
     color: inherit;
     font-weight: 600;
-    padding: 8px 18px;
-    margin-bottom: 12px;
+    padding: 10px 18px;
+    margin: 12px;
     border-radius: 18px;
     box-shadow: 3px 3px 5px #bebebe;
     background: white;
-    border: transparent;
+    border-color: transparent;
 }
 
 #loginButton:hover {
